:star:  feat: salvando o usuário no banco de dados

--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -14,7 +14,7 @@
         </section>
         <hr />
 
-        <form action="" method="post">
+        <form action="{% url "cadastro" %}" method="POST">{% csrf_token %}
           <h2 class="fonte-destaque1">Cadastre-se</h2>
           <br />
           <label for="">Username</label>
