:star:  feat: configurando as mensagens

--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -16,6 +16,15 @@
 
         <form action="{% url "cadastro" %}" method="POST">{% csrf_token %}
           <h2 class="fonte-destaque1">Cadastre-se</h2>
+
+          {% if messages %}
+            {% for message in messages %}
+                <section class="alert {{message.tags}}">
+                    {{message}}
+                </section>
+              {% endfor %}
+          {% endif %}
+          
           <br />
           <label for="">Username</label>
           <input
