:star:  feat: criando a função para login

--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -75,7 +75,7 @@
             id="btn_cadastrar"
             class="btn btn-success btn-dark-color"
           />
-          <a href="#" class="btn btn-dark-color-outline" id="btn_possui_conta">Já possuo uma conta</a>
+          <a href="{% url "login" %}" class="btn btn-dark-color-outline" id="btn_possui_conta">Já possuo uma conta</a>
         </form>
       </div>
     </div>
