:star: feat: inicialização das validações do médico

--- a/medico/templates/cadastro_medico.html
+++ b/medico/templates/cadastro_medico.html
@@ -27,6 +27,7 @@
               name="crm"
               id="crm"
               placeholder="CRM..."
+              value="{{ request.POST.crm }}"
             />
           </div>
           <div class="col-md">
@@ -139,6 +140,7 @@
           class="btn btn-success btn-dark-color"
         />
       </form>
+      <br />
     </div>
     <div class="col-md-4"></div>
   </div>
