--- a/medico/templates/abrir_horario.html
+++ b/medico/templates/abrir_horario.html
@@ -45,7 +45,11 @@
     <div class="col-md-4">
       <p style="font-size: 25px" class="p-bold">Seus horários:</p>
       <ul class="list-group">
-        <li>X</li>
+        
+        {% for data in datas_abertas %}
+          <li>{{data}}</li>          
+        {% endfor %}
+          
       </ul>
     </div>
   </div>
