--- a/paciente/templates/home.html
+++ b/paciente/templates/home.html
@@ -14,6 +14,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8">
+      {{medicos }}
       <p style="font-size: 25px" class="p-bold">
         Olá, <span class="color-dark">{{request.user.username}}.</span>
       </p>
@@ -40,29 +41,39 @@
       <hr />
 
       <div class="list-medicos">
+        {% for medico in medicos %}
+
         <div class="card-medicos shadow-main-color">
           <div class="row">
             <div class="col-md-3">
-              <img src="#" class="foto-perfil-card" alt="" />
+              <img src="{{medico.foto.url}}" class="foto-perfil-card" alt="{{medico.nome}}" />
             </div>
             <div class="col-md">
               <p style="font-size: 20px" class="p-bold">
-                Dr(a). Nome aqui
+                Dr(a). {{medico.nome}}
                 <i class="bi bi-patch-check-fill icon-main"></i>
               </p>
-              <p>Descrição aqui</p>
+              <p>{{medico.descricao}}</p>
             </div>
           </div>
-          <p><i class="bi bi-map icon-main"></i>&nbsp&nbspRua tal aqui, 000.</p>
+          <p><i class="bi bi-map icon-main"></i>&nbsp&nbsp{{medico.rua}}</p>
           <p>
             <i class="bi bi-calendar2-week icon-main"></i>&nbsp&nbspProxima
-            data: 00/00/0000
+            data: 
+            
+                {% if medico.proxima_data %}
+                  {{medico.proxima_data}}               
+                {% else %}
+                  Aguarde abertura de uma data...
+                {% endif %}             
 
             <a href="#" class="btn btn-success btn-dark-color">Agendar</a>
           </p>
         </div>
 
         <br />
+
+        {% endfor %}
       </div>
     </div>
     <div class="col-md-4">
