:star:  featr: filtrando por especialidade do médico

--- a/paciente/templates/home.html
+++ b/paciente/templates/home.html
@@ -13,12 +13,11 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-8">
-      {{medicos }}
+    <div class="col-md-8">    
       <p style="font-size: 25px" class="p-bold">
         Olá, <span class="color-dark">{{request.user.username}}.</span>
       </p>
-      <form action="" post="GET">
+      <form action="{% url 'home' %}" post="GET">
         <input
           type="text"
           class="form-control shadow-main-color"
@@ -28,8 +27,12 @@
         <br />
 
         <div class="especialidades">
-          <input type="checkbox" name="especialidades" value="" />
-          <span class="badge bg-secondary"> Especialidade X </span>
+          
+          {% for especialidade in especialidades %}
+            <input type="checkbox" name="especialidades" value="{{especialidade.id}}" />
+            <span class="badge bg-secondary"> {{especialidade.especialidade}} </span>
+          {% endfor %}     
+          
         </div>
         <br />
         <input
