:star: feat: criação da página para pode escolher o horário

--- a/paciente/templates/home.html
+++ b/paciente/templates/home.html
@@ -70,7 +70,7 @@
                   Aguarde abertura de uma data...
                 {% endif %}             
 
-            <a href="#" class="btn btn-success btn-dark-color">Agendar</a>
+            <a href="{% url 'escolher_horario' medico.id %}" class="btn btn-success btn-dark-color">Agendar</a>
           </p>
         </div>
 
