:star:  feat: agendando uma consulta

--- a/paciente/templates/escolher_horario.html
+++ b/paciente/templates/escolher_horario.html
@@ -40,7 +40,7 @@
         
         {% for data_aberta in datas_abertas %}
           <div class="col-md-3">
-            <a class="link" href="">
+            <a class="link" href="{% url 'agendar_horario' data_aberta.id %}">
               <div class="selecionar-dia">
                 <div class="header-dias">
                   {% comment %} <span class="mes"> {{data_aberta.data.month}} </span> {% endcomment %}
